[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/scenes/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scenes/FPSCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/FPSMesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/Pistol.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scripts/Class_AreaExtended.gd" type="Script" id=5]
[ext_resource path="res://assets/scripts/WeaponSwitcher.gd" type="Script" id=6]
[ext_resource path="res://assets/scripts/Interact.gd" type="Script" id=7]
[ext_resource path="res://assets/scripts/FPSController.gd" type="Script" id=8]
[ext_resource path="res://assets/scenes/Hammer.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/scripts/Wallet.gd" type="Script" id=10]
[ext_resource path="res://assets/scripts/Footsteps.gd" type="Script" id=11]
[ext_resource path="res://assets/sounds/pl_tile4.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/pl_tile5.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/pl_tile1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/pl_tile2.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/pl_tile3.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/sci_pain5.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/scream5.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sounds/pl_jump2.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sounds/pl_jumpland2.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/scenes/AudioManager.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/scripts/HitBox.gd" type="Script" id=22]
[ext_resource path="res://assets/scenes/Health.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/scripts/PlayerHealth.gd" type="Script" id=24]
[ext_resource path="res://assets/sounds/pl_step4.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sounds/pl_step2.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/pl_step3.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/pl_step1.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/scripts/AnimationController.gd" type="Script" id=29]
[ext_resource path="res://assets/scripts/StatusEffectManager.gd" type="Script" id=30]
[ext_resource path="res://assets/scenes/HealthUI.tscn" type="PackedScene" id=31]
[ext_resource path="res://assets/scripts/GatherPropInfo.gd" type="Script" id=32]
[ext_resource path="res://assets/scenes/PropInfo.tscn" type="PackedScene" id=33]
[ext_resource path="res://assets/scenes/AssaultRifle.tscn" type="PackedScene" id=34]

[sub_resource type="CapsuleShape" id=8]
radius = 0.26
height = 1.5

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 1, 0.25 )

[sub_resource type="CapsuleShape" id=5]
radius = 0.26

[sub_resource type="Animation" id=7]
resource_name = "recoil"
length = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath(".:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 93.0, 90.0 ]
}

[node name="FPSPlayer" type="KinematicBody" groups=["Players"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 8 )
jumpSpeed = 10.0
maxSlopeAngle = 45.0
push = 3.0
jumpSound = ExtResource( 19 )
landSound = ExtResource( 20 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 1, 0 )
shape = SubResource( 8 )

[node name="StatusEffects" type="Node" parent="."]
script = ExtResource( 30 )

[node name="HUD" parent="." instance=ExtResource( 1 )]
visible = false
margin_right = -0.00012207

[node name="OccupiedArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="OccupiedArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="HitBox" type="Area" parent="." groups=["Players"]]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 22 )

[node name="ColliderHitBox" type="CollisionShape" parent="HitBox"]
shape = SubResource( 5 )

[node name="Camera" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.8, 0 )
cull_mask = 1048575
fov = 93.0

[node name="InfoGather" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 5
script = ExtResource( 32 )

[node name="PropInfo" parent="Camera/InfoGather" instance=ExtResource( 33 )]
visible = false

[node name="Interaction" type="RayCast" parent="Camera"]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )
collision_mask = 21
script = ExtResource( 7 )

[node name="HoldPoint" type="Position3D" parent="Camera/Interaction"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.01992e-07, 0, 2 )

[node name="GunBelt" type="Spatial" parent="Camera"]
script = ExtResource( 6 )

[node name="AssaultRifle" parent="Camera/GunBelt" instance=ExtResource( 34 )]

[node name="Hammer" parent="Camera/GunBelt" instance=ExtResource( 9 )]

[node name="Pistol" parent="Camera/GunBelt" instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera"]
anims/recoil = SubResource( 7 )
script = ExtResource( 29 )

[node name="Health" parent="." instance=ExtResource( 23 )]
script = ExtResource( 24 )
hurtSound = ExtResource( 17 )
deathSound = ExtResource( 18 )

[node name="HealthUI" parent="Health" instance=ExtResource( 31 )]
visible = false

[node name="Wallet" type="Node" parent="."]
script = ExtResource( 10 )
startingMoney = 0

[node name="Footsteps" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
script = ExtResource( 11 )
tileSounds = [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 13 ) ]
concreteSounds = [ ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 25 ) ]

[node name="FPSMesh" parent="." instance=ExtResource( 3 )]

[node name="AudioManager" parent="." instance=ExtResource( 21 )]

[connection signal="body_entered" from="OccupiedArea" to="OccupiedArea" method="_on_body_entered"]
[connection signal="body_exited" from="OccupiedArea" to="OccupiedArea" method="_on_body_exited"]
[connection signal="apply_status_effect" from="HitBox" to="StatusEffects" method="apply_status_effect"]
[connection signal="hitbox_collision" from="HitBox" to="Health" method="_on_hitbox_collision"]
[connection signal="hide_ui" from="Camera/Interaction" to="HUD/InteractionPrompt" method="hide_text"]
[connection signal="prop_interacted_with" from="Camera/Interaction" to="HUD/TutorialUI" method="toggle_prop_controls"]
[connection signal="prop_picked_up" from="Camera/Interaction" to="Camera/GunBelt" method="set_current_weapon_index"]
[connection signal="show_ui" from="Camera/Interaction" to="HUD/InteractionPrompt" method="show_text"]
[connection signal="play_3d_sound" from="Health" to="AudioManager" method="new_3d_sound"]
[connection signal="play_3DSound" from="Footsteps" to="AudioManager" method="new_3d_sound"]

[editable path="HUD"]
